# healthsystems

./: .env.example  .env.railway.example  .gitignore  .pre-commit-config.yaml  ALCOHOL_EXTRACTION_SUMMARY.md  ALIGNMENT_AND_NEXT_STEPS.md  API_INTEGRATION_SUMMARY.md  AUDIT_AND_TEST_SUMMARY.md  BACKEND_API_DIAGNOSIS.md  CHANGELOG.md  CLAUDE.md  CONSOLIDATION_COMPLETE.md  CONSOLIDATION_PROMPTS.md  CONSOLIDATION_PROMPT_1_EXTRACTION.md  CONSOLIDATION_PROMPT_2_CLASSIFICATION.md  CONSOLIDATION_PROMPT_3_PATHFINDING.md  CONSOLIDATION_PROMPT_4_DEPENDENCIES.md  CONSOLIDATION_PROMPT_5_TEST_ORGANIZATION.md  CONSOLIDATION_PROMPT_6_HOOK_UTILITIES.md  CONSOLIDATION_PROMPT_7_CONFIGURATION.md  CONTRIBUTING.md  CRISIS_EXPLORER_FIX_COMPLETE.md  CRISIS_PATHWAY_EXPLORER_FIX_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  EXTRACTION_REVIEW_AND_ENHANCEMENTS.md  FINAL_TEST_SUMMARY.md  FIXES_COMPLETED_SESSION.md  FRONTEND_PROTOTYPE_SUMMARY.md  FRONTEND_TESTING_PROTOCOL.md  FRONTEND_TEST_EXPANSION_SUMMARY.md  GENERIC_EXTRACTION_IMPLEMENTATION.md  IMPLEMENTATION_AUDIT.md  IMPLEMENTATION_PROGRESS_SUMMARY.md  LICENSE  NODE_STRATIFICATION_PROMPT.md  PATHFINDER_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_FIX_COMPLETE.md  PHASE_2_PROGRESS_SUMMARY.md  PHASE_4_5_IMPLEMENTATION_COMPLETE.md  (+32 more)
backend/: .dockerignore  .env.example  .flake8  .gitignore  .railwayignore  Dockerfile  SETUP.md  alembic.ini  mechanism_update_report_20251130_184755.json  pyproject.toml  pytest.ini  railway.json  requirements-dev.txt  requirements.txt  start.sh  test_results.txt  verify_test_setup.py
backend/agents/: mechanism_validator.py
backend/alembic/: env.py
backend/algorithms/: __init__.py  bayesian_weighting.py  functional_form_classifier.py
backend/api/: __init__.py  config.py  main.py
backend/cli/: __init__.py  base.py  main.py
backend/config/: __init__.py  api.py  database.py  llm.py  schema_config.py
backend/configs/: alcohol_batch_discovery.json  alcohol_discovery_topics.json  alcohol_node_pairs.json  alcohol_node_pairs_batch2.json  alcoholism_discovery_topics.json  respiratory_discovery_topics.json
backend/core/: README.md  __init__.py  (+2 more)
(+12149 files in other folders)
